refactor: Improve int and double utilities